# pico_status

./: .gitignore  LICENSE  README.md
client/: Cargo.toml  install-ubuntu.sh  rp-compile.sh
client/.cargo/: config
client/src/: cli.rs  http.rs  lib.rs  main.rs  oauth.rs  status.rs
server_micropython/: main.py  paint.py  server.py  waveshare.py
