[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
graph-http = "0.2.2"
graph-oauth = "0.2.0"
graph-rs = "0.2.0"
graph-rs-sdk = "0.3.0"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["time"] }
urlencoding = "2.1.0"
warp = "0.3.2"
webbrowser = "0.7.1"
