[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.2"
webbrowser = "0.7.1"
