[package]
name = "pico-client"
version = "0.1.0"
edition = "2021"
description = "Application that updates Raspberry Pi Pico W with MS Teams/Outlook status"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.21", features = ["derive"] }
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
webbrowser = "0.8"
